<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context="com.example.wulei.train.LoginActivity">
 <!--只有布局为linearLayout时fitsSystemWindows才有效，给定status bar一个合理的
 topPadding-->

    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@mipmap/train"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="85dp"
        android:layout_marginBottom="24dp"
        />
    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/user"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_centerInParent="true"
        android:background="@drawable/edit_login"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:hint="@string/password"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_below="@id/user"
        android:background="@drawable/edit_login"
        android:gravity="center"
        />
    <Button
        android:id="@+id/button"
        android:text="@string/btn_login"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_login"
         />
    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/dark"
        android:layout_below="@id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        />
</RelativeLayout>





