<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    tools:context="com.example.wulei.train.RegisterActivity">

    <EditText
        android:id="@+id/user_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/user"
        android:textColorHint="@color/colorPrimary"
        android:background="@drawable/edit_login"
        />
    <EditText
        android:id="@+id/password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="24dp"
        android:hint="@string/password"
        android:textColorHint="@color/colorPrimary"
        android:background="@drawable/edit_login"
        />
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/name"
        android:textColorHint="@color/colorPrimary"
        android:background="@drawable/edit_login"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        style="@style/MyText"
        />
      <RadioGroup
          android:id="@+id/sex"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >
    <RadioButton
        android:id="@+id/man"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="男"
        style="@style/MyText"
        android:layout_weight="1"
        />
        <RadioButton
            android:id="@+id/women"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="女"
            style="@style/MyText"
            android:layout_weight="1"
            />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        >
        <android.widget.Spinner
            android:id="@+id/college"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            />
        <android.widget.Spinner
            android:id="@+id/profession"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            />
        <android.widget.Spinner
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            />
    </LinearLayout>
    <Button
    android:id="@+id/btn_register"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="24dp"
    android:layout_marginLeft="24dp"
    android:background="@drawable/btn_login"
    android:text="@string/btn_register"
    android:textSize="20sp"
    />
</LinearLayout>
